--- a/StarBusterCinima/pom.xml
+++ b/StarBusterCinima/pom.xml
@@ -15,6 +15,14 @@
 	</properties>
 
 	<dependencies>
+	
+<!-- 		by linda -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+	
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
