--- a/StarBusterCinima/pom.xml
+++ b/StarBusterCinima/pom.xml
@@ -123,19 +123,13 @@
 			<version>v1-rev136-1.23.0</version>
 		</dependency>
 			
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
+		<!-- linda's json's work -->
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
 		
 	</dependencies>
 
