--- a/StarBusterCinima/pom.xml
+++ b/StarBusterCinima/pom.xml
@@ -87,21 +87,21 @@
 		</dependency>
 
 		<!-- JSP 2.3.1 API -->
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>javax.servlet.jsp-api</artifactId>
-			<version>2.3.1</version>
-			<scope>provided</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>javax.servlet.jsp</groupId> -->
+<!-- 			<artifactId>javax.servlet.jsp-api</artifactId> -->
+<!-- 			<version>2.3.1</version> -->
+<!-- 			<scope>provided</scope> -->
+<!-- 		</dependency> -->
 
 		<!-- Servlet 3.1 API -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
-		</dependency>
-			
+<!-- 		<dependency> -->
+<!-- 			<groupId>javax.servlet</groupId> -->
+<!-- 			<artifactId>javax.servlet-api</artifactId> -->
+<!-- 			<version>3.1.0</version> -->
+<!-- 			<scope>provided</scope> -->
+<!-- 		</dependency> -->
+
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
@@ -122,21 +122,38 @@
 			<artifactId>google-api-services-oauth2</artifactId>
 			<version>v1-rev136-1.23.0</version>
 		</dependency>
-			
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
+
+		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+		<!-- linda's json's work -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>net.sf.json-lib</groupId> -->
+<!-- 			<artifactId>json-lib</artifactId> -->
+<!-- 			<version>2.4</version> -->
+<!-- 			<classifier>jdk15</classifier> -->
+<!-- 		</dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>commons-beanutils</groupId> -->
+<!-- 			<artifactId>commons-beanutils</artifactId> -->
+<!-- 			<version>1.9.3</version> -->
+<!-- 		</dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/net.sf.ezmorph/ezmorph -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>net.sf.ezmorph</groupId> -->
+<!-- 			<artifactId>ezmorph</artifactId> -->
+<!-- 			<version>1.0.6</version> -->
+<!-- 		</dependency> -->
+
+		<!-- by linda -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
