--- a/StarBusterCinima/pom.xml
+++ b/StarBusterCinima/pom.xml
@@ -117,6 +117,19 @@
 <!-- 			<artifactId>joda-time</artifactId> -->
 <!-- 			<version>2.3</version> -->
 <!-- 		</dependency> -->
+
+	<!-- JSP 2.3.1 API -->
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>2.3.1</version>
+			<scope>provided</scope>
+		</dependency>
+
+
+
+
+
 	</dependencies>
 
 	<build>
